# rsvm

./: .gitignore  CLAUDE.md  CLI_EXAMPLES.md  Cargo.toml  DESIGN.md  LICENSE  LICENSE_AUDIT.md  README.md  TUTORIAL.md  TUTORIAL_ja.md
.github/workflows/: ci.yml
benches/: kernel_benchmark.rs
examples/: chi_square_demo.rs  comprehensive_kernel_evaluation.rs  heart_dataset_evaluation.rs  hellinger_demo.rs  histogram_intersection_demo.rs  polynomial_demo.rs  rbf_demo.rs  sigmoid_demo.rs
scripts/: check-licenses.sh
src/: api.rs  lib.rs  persistence.rs
src/cache/: mod.rs
src/core/: error.rs  mod.rs  traits.rs  types.rs
src/data/: csv.rs  libsvm.rs  mod.rs
src/kernel/: chi_square.rs  hellinger.rs  histogram_intersection.rs  linear.rs  mod.rs  polynomial.rs  rbf.rs  sigmoid.rs  traits.rs
src/optimizer/: mod.rs
src/solver/: mod.rs  shrinking.rs  smo.rs
src/utils/: mod.rs
tests/: cli_tests.rs  dataset_compatibility.rs  integration_tests.rs
