[package]
name = "rsvm"
version = "0.1.0"
edition = "2021"
authors = ["rsvm contributors"]
description = "A pure Rust implementation of Support Vector Machine"
repository = "https://github.com/yourusername/rsvm"
license = "MIT OR BSD-3-Clause"
keywords = ["svm", "machine-learning", "classification"]
categories = ["science", "algorithms"]

[dependencies]
# Error handling - MIT/Apache-2.0
thiserror = "1.0"

# LRU cache - MIT/Apache-2.0
lru = "0.12"

# Command line argument parsing - MIT/Apache-2.0
clap = { version = "4.4", features = ["derive"] }

# Serialization for model saving/loading - MIT/Apache-2.0
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging - MIT/Apache-2.0
log = "0.4"
env_logger = "0.10"

# Date/time handling - MIT/Apache-2.0
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Float comparison - Apache-2.0
approx = "0.5"

# Benchmarking - MIT/Apache-2.0
criterion = "0.5"

# Temporary files for testing - MIT/Apache-2.0
tempfile = "3.8"

[features]
default = []

[[bin]]
name = "rsvm"
path = "src/bin/main.rs"

[[bench]]
name = "kernel_benchmark"
harness = false